--- a/src/styles/pages/Landing.scss
+++ b/src/styles/pages/Landing.scss
@@ -18,7 +18,7 @@
         justify-content: center;
         align-items: center;
         &--title {
-            margin: 10%;
+            margin: 10%, 10%, 10%,0;
         }
         &--icon {
             font-size: 9rem;
@@ -37,7 +37,7 @@
             justify-content: center;
             align-items: center;
             &--title {
-                margin-left: 15%;
+                margin-left: 0%;
             }
             &--icon {
                 font-size: 10rem;
