--- a/src/styles/pages/Landing.scss
+++ b/src/styles/pages/Landing.scss
@@ -25,7 +25,7 @@
         }
         &--text {
             margin-top: 20%;
-            margin-left: 15%;
+            //margin-left: 15%;
         }
         @include tablet {
             background-color: white;
@@ -44,7 +44,7 @@
             }
             &--text {
                 margin-top: 10%;
-                margin-left: 15%;
+               // margin-left: 15%;
             }   
         }
         
@@ -134,4 +134,11 @@
 li {
     list-style: none;
     font-family:  'Victor Mono', monospace;
+}
+
+.resumeText {
+    color: white;
+    font-size: 0.8rem;
+  
+    margin: 5% 10% 10% 10%;
 }
