--- a/src/styles/pages/Landing.scss
+++ b/src/styles/pages/Landing.scss
@@ -44,7 +44,7 @@
             }
             &--text {
                 margin-top: 10%;
-               // margin-left: 15%;
+               margin-left: 15%;
             }   
         }
         
