--- a/src/styles/pages/Landing.scss
+++ b/src/styles/pages/Landing.scss
@@ -2,21 +2,34 @@
 
 .container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: rgb(0, 0, 0);
     width: 100%;
     height: 100vh;
     font-family:  'Victor Mono', monospace;
+    @include tablet {
+        display: flex;
+        flex-direction: row;
+        background-color: rgb(0, 0, 0);
+        width: 100%;
+        height: 100vh;
+        font-family:  'Victor Mono', monospace; 
+    }
 
     &__header {
         background-color: white;
         color: rgb(0, 0, 0);
         padding: 30px;
-        width: 50vw;
+        width: 100vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        @include tablet {
+            padding: 30px;
+            width: 50vw;
+        }
+        
         &--title {
             margin: 10%, 10%, 10%,0;
         }
@@ -72,8 +85,14 @@
   }
 .buttonContainer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 20px;
+    padding-top: 10%;
+    @include tablet {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
     &__button {
         //display: inline-block; 
         padding: 10px 20px;
