--- a/src/styles/pages/Landing.scss
+++ b/src/styles/pages/Landing.scss
@@ -12,7 +12,7 @@
         flex-direction: row;
         background-color: rgb(0, 0, 0);
         width: 100%;
-        height: 100vh;
+        height: 100%;
         font-family:  'Victor Mono', monospace; 
     }
 
