--- a/src/styles/pages/Landing.scss
+++ b/src/styles/pages/Landing.scss
@@ -26,6 +26,7 @@
         justify-content: center;
         align-items: center;
         @include tablet {
+           
             padding: 30px;
             width: 50vw;
         }
@@ -33,13 +34,10 @@
         &--title {
             margin: 10%, 10%, 10%,0;
         }
-        &--icon {
-            font-size: 9rem;
+        &--img {
+            width: 80%;
         }
-        &--text {
-            margin-top: 20%;
-            //margin-left: 15%;
-        }
+        
         @include tablet {
             background-color: white;
             color: rgb(0, 0, 0);
@@ -56,8 +54,8 @@
                 font-size: 10rem;
             }
             &--text {
-                margin-top: 10%;
-               //margin-left: %;
+                margin-left: 10%;
+                margin-right: 10%;
             }   
         }
         
