--- a/src/styles/pages/Contact.scss
+++ b/src/styles/pages/Contact.scss
@@ -55,14 +55,17 @@
         overflow-y: auto;
         @include tablet {
             overflow: inherit;
+            font-size: 1.5rem;
         }
         &--buttonCv {
             padding: 20px;
             
             
             
+            
         }
         &--box {
+            
             //background-color: aqua;
             width: 50vw;
             //height: 80vh;
@@ -72,6 +75,9 @@
             justify-content: center;
             //padding-left: 20px;
             border-left: 2px solid rgb(0, 0, 0);
+            @include tablet {
+                margin-top: 10%;
+            }
         
         }
         &--boxTwo {
